--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "screenfull": "^5.1.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.4",
-    "vuex": "^3.6.2"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
+    "less": "^4.1.1",
     "vite": "^2.0.1"
   }
 }
