--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^2.0.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "screenfull": "^5.1.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.4",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
+    "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
     "vite": "^2.0.1"
   }
