--- a/vue2.0/.babelrc
+++ b/vue2.0/.babelrc
@@ -1,4 +1,17 @@
 {
+  "plugins": [
+    "transform-vue-jsx",
+    "transform-runtime",
+    [
+      "import",
+      {
+        "libraryName": "vant",
+        "libraryDirectory": "es",
+        "style": true
+      }
+    ],
+    "vant"
+  ],
   "presets": [
     [
       "env",
@@ -10,11 +23,6 @@
       }
     ],
     "stage-2"
-  ],
-  "plugins": [
-    "transform-vue-jsx",
-    "transform-runtime",
-    ["import", { "libraryName": "antd", "libraryDirectory": "lib" }, "antd"]
   ],
   "env": {
     "test": {
