--- a/vue2.0/package.json
+++ b/vue2.0/package.json
@@ -14,7 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.5",
+    "axios": "^0.21.1",
+    "fastclick": "^1.0.6",
+    "js-cookie": "^2.2.1",
+    "lib-flexible": "^0.3.2",
+    "vant": "^2.12.20",
     "vue": "^2.5.2",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
@@ -28,6 +32,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -57,18 +62,23 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
+    "postcss": "^8.3.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "postcss-px-to-viewport": "^1.1.1",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "ts-import-plugin": "^1.6.7",
     "ts-loader": "^3.1.1",
     "tslint": "^6.1.3",
     "tslint-config-standard": "^9.0.0",
